5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1888_3140.log
== TEST (2019-07-09 16:47:13) 
-- CODE:
from numpy import*
v= array(eval(input("digite o vetor: ")))
n= sum(v)
m= [(v)**5/sum(v)]1/5
-- ERROR:
File "XXXX", line 4
    m= [(v)**5/sum(v)]1/5
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:47:29) 
-- CODE:
from numpy import*
v= array(eval(input("digite o vetor: ")))
n= sum(v)
m= [(v)**5/sum(v)]1/5
-- EXECUTION TIME:
0.666954
-- ERROR:
  File "/home/codebench/codes/1888/3140/main.py", line 4
    m= [(v)**5/sum(v)]1/5
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
